# BloomFilter

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: push-to-hub.yml
src/: AddCommand.cpp  BloomFilter.cpp  BloomFilter.h  Foobar.cpp  Foobar.h  HashRepetition.h  IHashable.h  SearchCommand.cpp  main.cpp  myapp
src/BloomFilter/: BloomFilter.cpp
src/Foobar/: Foobar.cpp  Foobar.h
src/Interfaces/Commands/: ICommandable.h
src/Interfaces/Commands/subClasses/: AddCommand.h  SearchCommand.h
src/Interfaces/Hash/subClasses/: HashRepetition.h
src/Interfaces/IOChannels/: IInputChannel.h  IOutputChannel.h
src/Interfaces/IOChannels/subClasses/: ConsoleInputChannel.h  ConsoleOutputChannel.h
tests/: bloomfilter_test.cpp  test_main.cpp
